clusters/homelab/apps/ark-overseer/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ark-overseer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ark-overseer
  namespace: ark-overseer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ark-overseer
  template:
    metadata:
      labels:
        app: ark-overseer
    spec:
      containers:
      - name: ark-overseer
        image: ghcr.io/led0nk/ark-overseer:latest
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        args:
        - "/ark-overseer"
        - "-addr=0.0.0.0:8080"
        - "-grpc=backend.observability:4317"
        - "-domain=ark-overseer.monkey-capella.ts.net"
        - "-blacklist=/data"
        - "-db=/data"
        - "-config=/data"
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
        - mountPath: /data
          name: database
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        ports:
        - containerPort: 4180
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        volumeMounts:
        - mountPath: /data
          name: database
        args:
        - "--provider=github"
        - "--github-org=quixsi"
        - "--email-domain=*"
        - "--upstream=http://localhost:8080"
        - "--http-address=0.0.0.0:4180"
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: ark-database
---
apiVersion: v1
kind: Service
metadata:
  name: ark-overseer
  namespace: ark-overseer
spec:
  selector:
    app: ark-overseer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 4180
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ark-overseer
  namespace: ark-overseer
spec:
  ingressClassName: nginx
  rules:
  - host: ark-overseer.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ark-overseer
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ark-overseer-tailscale
  namespace: ark-overseer
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: ark-overseer
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - ark-overseer
